[GTK] Fix -Wpessimizing-move warnings after switch to WTFMove https://bugs.webkit.org/show_bug.cgi?id=152677

Reviewed by Andy Estes.

* platform/glib/KeyedDecoderGlib.cpp:
(WebCore::KeyedDecoderGlib::dictionaryFromGVariant):
* platform/graphics/egl/GLContextEGL.cpp:
(WebCore::GLContextEGL::createContext):
* platform/graphics/glx/GLContextGLX.cpp:
(WebCore::GLContextGLX::createContext):


Canonical link: https://commits.webkit.org/170765@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194527 268f45cc-cd09-0410-ab3c-d52691b4dbfc